--- a/README.org
+++ b/README.org
@@ -8,10 +8,11 @@ The purpose of this project is to practice my implmentations of various sorting 
 - [[https://en.wikipedia.org/wiki/Quicksort][Quicksort]]
 - [[https://en.wikipedia.org/wiki/Cocktail_shaker_sort][Cocktail Shaker Sort]]
 - [[https://en.wikipedia.org/wiki/Stooge_sort][Stooge Sort]]
+- [[https://en.wikipedia.org/wiki/Insertion_Sort][Insertion Sort]]
 
 * Planned Algorithms
 
-- [ ] [[https://en.wikipedia.org/wiki/Insertion_Sort][Insertion Sort]]
+- [X] [[https://en.wikipedia.org/wiki/Insertion_Sort][Insertion Sort]]
 - [ ] [[https://en.wikipedia.org/wiki/Merge_Sort][Merge Sort]]
 - [ ] [[https://en.wikipedia.org/wiki/TimSort][Timsort]]
 - [ ] [[https://en.wikipedia.org/wiki/Radix_Sort][Radix Sort]]
